maybe fixed menu list on mobile

--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,11 @@ h1{
   font-size: 2em;
   background:#FFFDD0;
   border: 3px solid black;
+display:flex;
   flex-direction:row;
+  padding:0;
+  margin:0;
+  list-style-type: none;
 }
 
 .navlist li {
